--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -5,5 +5,6 @@
   <body>
     <h1>Mon super site de gossip, du dossier views !</h1>
     <p>Hey courage</p>
+    <a href="/gossips/new/">nouveau gossip</a>
   </body>
 </html>
