--- a/lib/views/gossips_show.erb
+++ b/lib/views/gossips_show.erb
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello</title>
+	<title>Page Potin</title>
 </head>
 <body>
-
+	<h1>PAGE POTIN</h1>
+	<p>Voici la page du potin n°<%= find_gossips[0] %></p>
+	<p>Son auteur : <%= find_gossips[1][0] %></p>
+	<p>Le contenu du potin : <%= find_gossips[1][1] %></p>
+	<a href="/">Lien pour revenir à la page des potins</a>	          	
 </body>
 </html>
